# roscal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  cliff.toml  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml
roscal_cli/: Cargo.toml
roscal_cli/src/: lib.rs  main.rs
roscal_cli/src/cli/: cli_fn.rs  cli_opts.rs  mod.rs
roscal_cli/src/models/: dissect.rs  merge.rs  mod.rs  model.rs  utils.rs  validate.rs  validation.rs  workspace.rs
roscal_cli/tests/: dissect.rs  merge.rs  roundtrip.rs
roscal_cli/tests/data/: ap.yaml  ar.yaml  catalog.yaml  compdef.yaml  edit_back_matter  edit_uuid  malformed  poam.yaml  profile.yaml  ssp.yaml
roscal_lib/: Cargo.toml  README.md  build.rs
roscal_lib/jsonschema/baseline_unified/: 1.0.0.json  loc
roscal_lib/jsonschema/previous_unified/: 1.1.1.json  loc
roscal_lib/jsonschema/tracking_latest_models/: oscal_assessment-plan_schema.json  oscal_assessment-results_schema.json  oscal_catalog_schema.json  oscal_component_schema.json  oscal_poam_schema.json  oscal_profile_schema.json  oscal_ssp_schema.json
roscal_lib/jsonschema/tracking_latest_unified/: 1.1.2.json  loc
roscal_lib/src/: common_impl.rs  lib.rs  uuid_impl.rs  validation.rs
roscal_lib/src/assessment/: assessment_plan.rs  assessment_results.rs  mod.rs  poam.rs
roscal_lib/src/control/: catalog.rs  mod.rs  profile.rs
roscal_lib/src/implementation/: component_definition.rs  mod.rs  ssp.rs
roscal_lib/tests/: loc  malformed.rs  parse_test.rs
roscal_lib/tests/ap/json/: ifa_assessment-plan-example-min.json  ifa_assessment-plan-example.json
roscal_lib/tests/ar/json/: ifa_assessment-results-example-min.json  ifa_assessment-results-example.json
roscal_lib/tests/catalog/json/: basic-catalog-min.json
roscal_lib/tests/component-definition/json/: example-component-definition-min.json  example-component-definition.json  example-component.json
roscal_lib/tests/malformed/: date.yaml  datetime.yaml  email.yaml  uri.yaml  uuid.yaml
roscal_lib/tests/poam/json/: ifa_plan-of-action-and-milestones-min.json  ifa_plan-of-action-and-milestones.json
roscal_lib/tests/profile/json/: NIST_SP-800-53_rev5_HIGH-baseline_profile.json
roscal_lib/tests/ssp/json/: ifa_ssp-example-min.json  ifa_ssp-example.json  oscal_leveraged-example_ssp-min.json  oscal_leveraging-example_ssp-min.json  ssp-example-min.json
