[workspace]
resolver = "2"
members = ["roscal_lib", "roscal_cli"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]

[profile.release]
lto = true
strip = true
opt-level = 2
panic = 'abort'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
