[workspace]
resolver = "2"
members = ["roscal_lib", "roscal_cli"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

[workspace.dependencies]
anyhow = "1.0.90"
assert_cmd = "2.0.16"
clap = { version = "4.5.13", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
derivative = "2.2.0"
derive_builder = "0.20.0"
iana-time-zone = "0.1.61"
json-schema-diff = "0.1.7"
lazy_static = "1.5.0"
prettyplease = "0.2.29"
proc-macro2 = "1.0.82"
pulldown-cmark = "0.10.3"
quote = "1.0.38"
rand = "0.8.5"
regex = "1.11.0"
sha2 = "0.10.8"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
syn = {version = "2.0.63", features = ["full"]}
tempfile = "3.17.1"
thiserror = "1.0.60"
tokio = { version = "1.43.0", features = ["full"] }
uriparse = "0.6.4"
uuid = { version = "1.14.0", features = ["v4", "v5", "fast-rng", "serde"] }
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true
opt-level = 2
panic = 'abort'

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
