[package]
name = "roscal_cli"
version = "0.1.0"
edition = "2021"
authors = ["Geoffrey Borough <geoffrey.borough@outlook.com>"]
homepage = "https://github.com/gborough/roscal"
repository = "https://github.com/gborough/roscal"
license = "MIT OR Apache-2.0"
description = """
CLI For Open Security Controls Assessment Language In Rust
"""

[dependencies]
roscal_lib = "0.1.0"

anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
iana-time-zone = "0.1.60"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
walkdir = "2.5.0"

[[bin]]
name = "roscal"
path = "src/main.rs"
