[package]
name = "roscal_cli"
version = "0.1.0"
edition = "2021"
authors = ["Geoffrey Borough <geoffrey.borough@outlook.com>"]
homepage = "https://github.com/gborough/roscal"
repository = "https://github.com/gborough/roscal"
license = "MIT OR Apache-2.0"
description = """
CLI For Open Security Controls Assessment Language In Rust
"""

[dependencies]
roscal_lib = "0.1.0"

anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
iana-time-zone = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[[bin]]
name = "roscal"
path = "src/main.rs"
