[package]
name = "roscal_lib"
version = "0.1.0"
edition = "2021"
authors = ["Geoffrey Borough <geoffrey.borough@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/gborough/roscal"
repository = "https://github.com/gborough/roscal"
description = """
Open Security Controls Assessment Language In Rust
"""
license = "MIT OR Apache-2.0"
keywords = ["OSCAL", "cybersecurity"]
categories = ["api-bindings", "encoding"]
publish = ["crates-io"]
exclude = ["jsonschema/", "build.rs"]

[dependencies]
chrono = { workspace = true }
derivative = { workspace = true }
derive_builder = { workspace = true }
lazy_static = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
uriparse = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
json-schema-diff = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }